// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayPagination renders 1`] = `
<div>
  <ul
    class="pagination pagination-root pagination-lg"
  >
    <li
      class="page-item"
    >
      <button
        class="page-link"
        data-testid="prevArrow"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-left"
          role="presentation"
        >
          <use
            xlink:href="path/to/spritemap#angle-left"
          />
        </svg>
      </button>
    </li>
    <li
      class="page-item"
    >
      <button
        class="page-link"
      >
        1
      </button>
    </li>
    <li
      class="dropdown page-item"
    >
      <button
        class="dropdown-toggle page-link btn btn-unstyled"
        type="button"
      >
        ...
      </button>
    </li>
    <li
      class="page-item"
    >
      <button
        class="page-link"
      >
        10
      </button>
    </li>
    <li
      class="page-item"
    >
      <button
        class="page-link"
      >
        11
      </button>
    </li>
    <li
      class="page-item active"
    >
      <button
        class="page-link"
      >
        12
      </button>
    </li>
    <li
      class="page-item"
    >
      <button
        class="page-link"
      >
        13
      </button>
    </li>
    <li
      class="page-item"
    >
      <button
        class="page-link"
      >
        14
      </button>
    </li>
    <li
      class="dropdown page-item"
    >
      <button
        class="dropdown-toggle page-link btn btn-unstyled"
        type="button"
      >
        ...
      </button>
    </li>
    <li
      class="page-item"
    >
      <button
        class="page-link"
      >
        25
      </button>
    </li>
    <li
      class="page-item"
    >
      <button
        class="page-link"
        data-testid="nextArrow"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-right"
          role="presentation"
        >
          <use
            xlink:href="path/to/spritemap#angle-right"
          />
        </svg>
      </button>
    </li>
  </ul>
</div>
`;

exports[`ClayPagination renders with only one page 1`] = `
<div>
  <ul
    class="pagination pagination-root"
  >
    <li
      class="page-item disabled"
    >
      <button
        class="page-link"
        data-testid="prevArrow"
        disabled=""
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-left"
          role="presentation"
        >
          <use
            xlink:href="path/to/spritemap#angle-left"
          />
        </svg>
      </button>
    </li>
    <li
      class="page-item active"
    >
      <button
        class="page-link"
      >
        1
      </button>
    </li>
    <li
      class="page-item disabled"
    >
      <button
        class="page-link"
        data-testid="nextArrow"
        disabled=""
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-right"
          role="presentation"
        >
          <use
            xlink:href="path/to/spritemap#angle-right"
          />
        </svg>
      </button>
    </li>
  </ul>
</div>
`;

exports[`ClayPaginationWithBar renders 1`] = `
<div>
  <div
    class="pagination-bar"
  >
    <div
      class="dropdown pagination-items-per-page"
    >
      <button
        class="dropdown-toggle btn btn-unstyled"
        data-testid="selectPaginationBar"
        type="button"
      >
        10 items
        <svg
          class="lexicon-icon lexicon-icon-caret-double-l"
          role="presentation"
        >
          <use
            xlink:href="path/to/spritemap#caret-double-l"
          />
        </svg>
      </button>
    </div>
    <div
      class="pagination-results"
    >
      Showing 1 to 10 of 100
    </div>
    <ul
      class="pagination pagination-root"
    >
      <li
        class="page-item disabled"
      >
        <button
          class="page-link"
          data-testid="prevArrow"
          disabled=""
        >
          <svg
            class="lexicon-icon lexicon-icon-angle-left"
            role="presentation"
          >
            <use
              xlink:href="path/to/spritemap#angle-left"
            />
          </svg>
        </button>
      </li>
      <li
        class="page-item active"
      >
        <button
          class="page-link"
        >
          1
        </button>
      </li>
      <li
        class="page-item"
      >
        <button
          class="page-link"
        >
          2
        </button>
      </li>
      <li
        class="page-item"
      >
        <button
          class="page-link"
        >
          3
        </button>
      </li>
      <li
        class="dropdown page-item"
      >
        <button
          class="dropdown-toggle page-link btn btn-unstyled"
          type="button"
        >
          ...
        </button>
      </li>
      <li
        class="page-item"
      >
        <button
          class="page-link"
        >
          10
        </button>
      </li>
      <li
        class="page-item"
      >
        <button
          class="page-link"
          data-testid="nextArrow"
        >
          <svg
            class="lexicon-icon lexicon-icon-angle-right"
            role="presentation"
          >
            <use
              xlink:href="path/to/spritemap#angle-right"
            />
          </svg>
        </button>
      </li>
    </ul>
  </div>
</div>
`;
